// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WalletAssetDetails.vue > should be rendered correctly 1`] = `
<wallet-base-stub
  data-v-91b41f0c=""
  resetfocus="false"
  showback="true"
  showclose="false"
  showheader="true"
  title="SORA"
  titlecenter="false"
  tooltip=""
/>
`;

exports[`WalletAssetDetails.vue > should show detailed balance info when button clicked 1`] = `
<wallet-base-stub
  data-v-91b41f0c=""
  resetfocus="true"
  showback="true"
  showclose="false"
  showheader="true"
  title="SORA"
  titlecenter="false"
  tooltip=""
/>
`;
